Added sunrise/sunset when temp > 32. Also began editing the forecast grid.

--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
           </div>
           <div class="forecast" id="forecast">
             <div class="weekBoxes">
-              <div class="day1" id="day1"></div>
-              <div class="day2" id="day2"></div>
-              <div class="day3" id="day3"></div>
-              <div class="day4" id="day4"></div>
-              <div class="day5" id="day5"></div>
-              <div class="search"></div>
-              <div class="stats"></div>
-              <div class="atribLogo"></div>
-              <div class="otherInfo"></div>
+              <div class="dayOne" id="dayOne"></div>
+              <div class="dayTwo" id="dayTwo"></div>
+              <div class="dayThree" id="dayThree"></div>
+              <div class="dayFour" id="dayFour"></div>
+              <div class="dayFive" id="dayFive"></div>
+              <div class="searchBar" id="searchBar"></div>
+              <div class="logo" id="logo"></div>
+              <div class="weatherData" id="weatherData"></div>
             </div>
           </div>
       </div>
