Added icons for the forecast weather and simplified code. Check if forecast is displaying correctly?

--- a/index.html
+++ b/index.html
@@ -48,11 +48,21 @@
           </div>
           <div class="forecast" id="forecast">
             <div class="weekBoxes">
-              <div class="dayOne" id="dayOne"></div>
-              <div class="dayTwo" id="dayTwo"></div>
-              <div class="dayThree" id="dayThree"></div>
-              <div class="dayFour" id="dayFour"></div>
-              <div class="dayFive" id="dayFive"></div>
+              <div class="dayOne" id="dayOne">
+                <span class="material-symbols-outlined" id="dayOneIcon"></span>
+              </div>
+              <div class="dayTwo" id="dayTwo">
+                <span class="material-symbols-outlined" id="dayTwoIcon"></span>
+              </div>
+              <div class="dayThree" id="dayThree">
+                <span class="material-symbols-outlined" id="dayThreeIcon"></span>
+              </div>
+              <div class="dayFour" id="dayFour">
+                <span class="material-symbols-outlined" id="dayFourIcon"></span>
+              </div>
+              <div class="dayFive" id="dayFive">
+                <span class="material-symbols-outlined" id="dayFiveIcon"></span>
+              </div>
               <div class="searchBar" id="searchBar"></div>
               <div class="logo" id="logo"></div>
               <div class="weatherData" id="weatherData"></div>
