Added days of the week to the Forecast.

--- a/index.html
+++ b/index.html
@@ -49,18 +49,23 @@
           <div class="forecast" id="forecast">
             <div class="weekBoxes">
               <div class="dayOne" id="dayOne">
+                <h2 class="dayOfWeek" id="dayOneDate"></h2>
                 <span class="material-symbols-outlined" id="dayOneIcon"></span>
               </div>
               <div class="dayTwo" id="dayTwo">
+                <h2 class="dayOfWeek" id="dayTwoDate"></h2>
                 <span class="material-symbols-outlined" id="dayTwoIcon"></span>
               </div>
               <div class="dayThree" id="dayThree">
+                <h2 class="dayOfWeek" id="dayThreeDate"></h2>
                 <span class="material-symbols-outlined" id="dayThreeIcon"></span>
               </div>
               <div class="dayFour" id="dayFour">
+                <h2 class="dayOfWeek" id="dayFourDate"></h2>
                 <span class="material-symbols-outlined" id="dayFourIcon"></span>
               </div>
               <div class="dayFive" id="dayFive">
+                <h2 class="dayOfWeek" id="dayFiveDate"></h2>
                 <span class="material-symbols-outlined" id="dayFiveIcon"></span>
               </div>
               <div class="searchBar" id="searchBar"></div>
@@ -70,7 +75,7 @@
           </div>
       </div>
     </div>
-
+    <h4>Weather Forecast WMO is the most severe condition for the day.</h4>
     <a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a>
   </section>
   
