Margin changes, added high/low for the forecast

--- a/index.html
+++ b/index.html
@@ -51,22 +51,27 @@
               <div class="dayOne" id="dayOne">
                 <h2 class="dayOfWeek" id="dayOneDate"></h2>
                 <span class="material-symbols-outlined" id="dayOneIcon"></span>
+                <h4 class="highLow" id="highLowOne"></h4>
               </div>
               <div class="dayTwo" id="dayTwo">
                 <h2 class="dayOfWeek" id="dayTwoDate"></h2>
                 <span class="material-symbols-outlined" id="dayTwoIcon"></span>
+                <h4 class="highLow" id="highLowTwo"></h4>
               </div>
               <div class="dayThree" id="dayThree">
                 <h2 class="dayOfWeek" id="dayThreeDate"></h2>
                 <span class="material-symbols-outlined" id="dayThreeIcon"></span>
+                <h4 class="highLow" id="highLowThree"></h4>
               </div>
               <div class="dayFour" id="dayFour">
                 <h2 class="dayOfWeek" id="dayFourDate"></h2>
                 <span class="material-symbols-outlined" id="dayFourIcon"></span>
+                <h4 class="highLow" id="highLowFour"></h4>
               </div>
               <div class="dayFive" id="dayFive">
                 <h2 class="dayOfWeek" id="dayFiveDate"></h2>
                 <span class="material-symbols-outlined" id="dayFiveIcon"></span>
+                <h4 class="highLow" id="highLowFive"></h4>
               </div>
               <div class="searchBar" id="searchBar"></div>
               <div class="logo" id="logo"></div>
