Began progress on hourly weather graph.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,27 @@
               </div>
               <div class="searchBar" id="searchBar"></div>
               <div class="logo" id="logo"></div>
-              <div class="weatherData" id="weatherData"></div>
+              <div class="weatherData" id="weatherData">
+                <!-- svg graph wip -->
+                <svg viewBox="0 0 600 100" class="chart">
+                 <polyline
+                   pathLength="24"
+                   points="
+                   0,100
+                   0,54
+                   75,60
+                   150,80
+                   225,20
+                   300,80
+                   375,80
+                   450,60
+                   525,80
+                   600,40
+                   600,100
+                   "
+                 ></polyline>
+               </svg>
+              </div>
             </div>
           </div>
       </div>
