Fixed a few style suggestions.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div class="weatherData" id="weatherData">
                 <!-- svg graph wip -->
                 <svg viewBox="0 0 600 100" class="chart">
-                 <polyline
+                 <polyline id="poly"
                    pathLength="24"
                    points="
                    0,100
