--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
 </head>
 
 <body>
@@ -76,25 +77,28 @@
               <div class="searchBar" id="searchBar"></div>
               <div class="logo" id="logo"></div>
               <div class="weatherData" id="weatherData">
-                <!-- svg graph wip -->
-                <svg viewBox="0 0 600 100" class="chart">
-                 <polyline id="poly"
-                   pathLength="24"
-                   points="
-                   0,100
-                   0,54
-                   75,60
-                   150,80
-                   225,20
-                   300,80
-                   375,80
-                   450,60
-                   525,80
-                   600,40
-                   600,100
-                   "
-                 ></polyline>
-               </svg>
+                <!--  graph wip (put temp data in span)-->
+                <table class="charts-css area data-spacing-5" id="tempChart">
+
+                   <tbody>
+                     <tr>
+                       <td style="--start: 0.2; --size: 0.4"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <td style="--start: 0.4; --size: 0.8"><span class="data"></span></td>
+                    </tr>
+                    <tr>
+                      <td style="--start: 0.8; --size: 0.6"><span class="data"></span></td>
+                    </tr>
+                    <tr>
+                      <td style="--start: 0.6; --size: 1.0"><span class="data"></span></td>
+                    </tr>
+                    <tr>
+                      <td style="--start: 1.0; --size: 0.3"><span class="data"></span></td>
+                    </tr>
+                  </tbody>
+                  
+                </table>
               </div>
             </div>
           </div>
