javascript sets time labels

--- a/index.html
+++ b/index.html
@@ -78,24 +78,45 @@
               <div class="logo" id="logo"></div>
               <div class="weatherData" id="weatherData">
                 <!--  graph wip (put temp data in span)-->
-                <table class="charts-css area data-spacing-5" id="tempChart">
+                <table class="charts-css area data-spacing-1 show-labels" id="tempChart">
 
                    <tbody>
                      <tr>
-                       <td style="--start: 0.2; --size: 0.4"><span class="data"></span></td>
+                       <th scope="row" id="p1"></th>
+                       <td style="--start: 0.2; --size: 0.4"><span class="data">null</span></td>
                      </tr>
                      <tr>
-                       <td style="--start: 0.4; --size: 0.8"><span class="data"></span></td>
-                    </tr>
-                    <tr>
-                      <td style="--start: 0.8; --size: 0.6"><span class="data"></span></td>
-                    </tr>
-                    <tr>
-                      <td style="--start: 0.6; --size: 1.0"><span class="data"></span></td>
-                    </tr>
-                    <tr>
-                      <td style="--start: 1.0; --size: 0.3"><span class="data"></span></td>
-                    </tr>
+                       <th scope="row" id="p2"></th>
+                       <td style="--start: 0.4; --size: 0.8"><span class="data">null</span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p3"></th>
+                       <td style="--start: 0.8; --size: 0.2"><span class="data">null</span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p4"></th>
+                       <td style="--start: 0.2; --size: 0.7"><span class="data">null</span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p5"></th>
+                       <td style="--start: 0.7; --size: 0.3"><span class="data">null</span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p6"></th>
+                       <td style="--start: 0.3; --size: 0.4"><span class="data">null</span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p7"></th>
+                       <td style="--start: 0.4; --size: 0.5"><span class="data">null</span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p8"></th>
+                       <td style="--start: 0.5; --size: 0.4"><span class="data">null</span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p9"></th>
+                       <td style="--start: 0.4; --size: 0.1"><span class="data">null</span></td>
+                     </tr>
                   </tbody>
                   
                 </table>
