--- a/index.html
+++ b/index.html
@@ -83,39 +83,39 @@
                    <tbody>
                      <tr>
                        <th scope="row" id="p1"></th>
-                       <td style="--start: 0.2; --size: 0.4"><span class="data">null</span></td>
+                       <td style="--start: 0.2; --size: 0.4" id="point1"><span class="data" id="pin1">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p2"></th>
-                       <td style="--start: 0.4; --size: 0.8"><span class="data">null</span></td>
+                       <td style="--start: 0.4; --size: 0.8" id="point2"><span class="data" id="pin2">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p3"></th>
-                       <td style="--start: 0.8; --size: 0.2"><span class="data">null</span></td>
+                       <td style="--start: 0.8; --size: 0.2" id="point3"><span class="data" id="pin3">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p4"></th>
-                       <td style="--start: 0.2; --size: 0.7"><span class="data">null</span></td>
+                       <td style="--start: 0.2; --size: 0.7" id="point4"><span class="data" id="pin4">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p5"></th>
-                       <td style="--start: 0.7; --size: 0.3"><span class="data">null</span></td>
+                       <td style="--start: 0.7; --size: 0.3"  id="point5"><span class="data" id="pin5">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p6"></th>
-                       <td style="--start: 0.3; --size: 0.4"><span class="data">null</span></td>
+                       <td style="--start: 0.3; --size: 0.4" id="point6"><span class="data" id="pin6">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p7"></th>
-                       <td style="--start: 0.4; --size: 0.5"><span class="data">null</span></td>
+                       <td style="--start: 0.4; --size: 0.5" id="point7"><span class="data" id="pin7">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p8"></th>
-                       <td style="--start: 0.5; --size: 0.4"><span class="data">null</span></td>
+                       <td style="--start: 0.5; --size: 0.4" id="point8"><span class="data" id="pin8">null</span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p9"></th>
-                       <td style="--start: 0.4; --size: 0.1"><span class="data">null</span></td>
+                       <td style="--start: 0.4; --size: 0.1"  id="point9"><span class="data" id="pin9">null</span></td>
                      </tr>
                   </tbody>
                   
