--- a/index.html
+++ b/index.html
@@ -78,44 +78,104 @@
               <div class="logo" id="logo"></div>
               <div class="weatherData" id="weatherData">
                 <!--  graph wip (put temp data in span)-->
-                <table class="charts-css area data-spacing-1 show-labels" id="tempChart">
+                <table class="charts-css area data-spacing-1 show-labels labels-align-center" id="tempChart">
 
                    <tbody>
                      <tr>
                        <th scope="row" id="p1"></th>
-                       <td style="--start: 0.2; --size: 0.4" id="point1"><span class="data" id="pin1">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point1"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p2"></th>
-                       <td style="--start: 0.4; --size: 0.8" id="point2"><span class="data" id="pin2">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point2"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p3"></th>
-                       <td style="--start: 0.8; --size: 0.2" id="point3"><span class="data" id="pin3">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point3"><span class="data" id="pin1"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p4"></th>
-                       <td style="--start: 0.2; --size: 0.7" id="point4"><span class="data" id="pin4">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point4"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p5"></th>
-                       <td style="--start: 0.7; --size: 0.3"  id="point5"><span class="data" id="pin5">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point5"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p6"></th>
-                       <td style="--start: 0.3; --size: 0.4" id="point6"><span class="data" id="pin6">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point6"><span class="data" id="pin2"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p7"></th>
-                       <td style="--start: 0.4; --size: 0.5" id="point7"><span class="data" id="pin7">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point7"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p8"></th>
-                       <td style="--start: 0.5; --size: 0.4" id="point8"><span class="data" id="pin8">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point8"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p9"></th>
-                       <td style="--start: 0.4; --size: 0.1"  id="point9"><span class="data" id="pin9">null</span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point9"><span class="data" id="pin3"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p10"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point10"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p11"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point11"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p12"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point12"><span class="data" id="pin4"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p13"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point13"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p14"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point14"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p15"></th>
+                       <td style="--start: 0.2; --size: 0.2"  id="point15"><span class="data" id="pin5"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p16"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point16"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p17"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point17"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p18"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point18"><span class="data" id="pin6"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p19"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point19"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p20"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point20"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p21"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point21"><span class="data" id="pin7"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p22"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point22"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p23"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point23"><span class="data"></span></td>
+                     </tr>
+                     <tr>
+                       <th scope="row" id="p24"></th>
+                       <td style="--start: 0.2; --size: 0.2" id="point24"><span class="data" id="pin8"></span></td>
                      </tr>
                   </tbody>
                   
