--- a/index.html
+++ b/index.html
@@ -74,10 +74,15 @@
                 <span class="material-symbols-outlined" id="dayFiveIcon"></span>
                 <h4 class="highLow" id="highLowFive"></h4>
               </div>
-              <div class="searchBar" id="searchBar"></div>
+              <div class="searchBar" id="searchBar">
+                <input type="text" id="searchBarA" placeholder="Search for a City" onkeyup="progressSearch()">
+                <ul id="listOfOptions">
+                  This feature is currently unavailable.
+                </ul>
+              </div>
               <div class="logo" id="logo"></div>
               <div class="weatherData" id="weatherData">
-                <!--  graph wip (put temp data in span)-->
+                <!--  graph -->
                 <table class="charts-css area data-spacing-1 show-labels labels-align-center" id="tempChart">
 
                    <tbody>
