footer, begun some mobile integration

--- a/index.html
+++ b/index.html
@@ -190,9 +190,20 @@
           </div>
       </div>
     </div>
-    <a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a>
-  </section>
   
+  </section>
+ <footer>
+    <h3>
+      Open Source on <a href="https://github.com/colin-JM/Weather" target="_blank">Github</a>. Please star if you like this project. <br> Repo by colin-JM.
+    </h3>
+    <h4>
+       Weather Data by <a href="https://open-meteo.com/" target="_blank">Open-Meteo.com</a>. <br>
+       Reverse Geocoding provided by <a href="https://www.bigdatacloud.com/" target="_blank">Big Data Cloud</a>.
+    </h4>
+   <h6>
+     This is a side project for personal education purposes. <br> This site does not store any personal information. Any searched terms, inputed geolocation, etc. is not stored by this project. <br> WARNING: This project is not optimized for mobile viewing. Please view on a monitor or laptop for the time being.
+   </h6>
+  </footer> 
 
 
 </body>
