--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   <section class="hero">
     <div class="content-box" id="content-box">
       <div class="locPrompt" id="locPrompt">
-        <h2>We need your location</h2>
-        <h3>Please grant us your geolocation so we can find your weather.<br></br>Don't fret, we don't store your location or anything else.</h3>
-        <button id="show" class="button1">Find My Weather</button>
+        <h2>Weather /  <span>by colinJM</span></h2>
+        <h3>Please grant us your geolocation so we can find your weather.<br></br>We don't store the inputed location or anything else.</h3>
+        <button id="show" class="button1">Find My Weather</button><br>
+        <p class="find"><img src="images/github-mark-white.png" class="git-1" alt="Github Logo"><a href="https://github.com/colin-JM/Weather" target="_blank">View Repo on Github</a></p>
       </div>
       <div class="inner-grid">
           <div class="today" id="today">
@@ -193,17 +194,37 @@
   
   </section>
  <footer>
-    <h3>
-      Open Source on <a href="https://github.com/colin-JM/Weather" target="_blank">Github</a>. Please star if you like this project. <br> Repo by colin-JM.
-    </h3>
-    <h4>
-       Weather Data by <a href="https://open-meteo.com/" target="_blank">Open-Meteo.com</a>. <br>
-       Reverse Geocoding provided by <a href="https://www.bigdatacloud.com/" target="_blank">Big Data Cloud</a>.
-    </h4>
-   <h6>
-     This is a side project for personal education purposes. <br> This site does not store any personal information. Any searched terms, inputed geolocation, etc. is not stored by this project. <br> WARNING: This project is not optimized for mobile viewing. Please view on a monitor or laptop for the time being.
-   </h6>
-  </footer> 
+   <div class="newFooter">
+    <div class="bottomFooter">
+      <h6>This is a side project for personal education purposes. <br> This site does not store any personal information. Any searched terms, inputed geolocation, etc. is not stored by this project. <br> WARNING: This project is not optimized for mobile viewing. Please view on a monitor or laptop for the time being.</h6>
+    </div>
+    <div class="footerSquare1">
+      <ul>
+        <li>Project</li>
+        <li><a href="https://github.com/colin-JM/Weather/blob/main/LICENSE" target="_blank">Licence</a></li>
+        <li><a>About</a></li>
+      </ul>
+    </div>
+    <div class="footerSquare2">
+      <ul>
+        <li>Repo</li>
+        <li><a href="https://github.com/colin-JM/Weather" target="_blank">Github</a></li>
+        <li><a href="https://replit.com/@colinJM" target="_blank">Replit</a></li>
+      </ul>
+    </div>
+    <div class="footerSquare3">
+      <ul>
+        <li>Used APIs</li>
+        <li><a href="https://open-meteo.com/" target="_blank">Open-Meteo</a></li>
+        <li><a href="https://www.bigdatacloud.com/" target="_blank">Big Data Cloud</a></li>
+      </ul>
+    </div>
+    <div class="footerSquare4">
+      <h2>Weather /  <span>by colinJM</span></h2>
+      <p class="findA"><img src="images/github-mark-white.png" class="git-2" alt="Github Logo"><a href="https://github.com/colin-JM/Weather" target="_blank">Star on Github</a></p>
+    </div>
+  </div>
+</footer> 
 
 
 </body>
