--- a/index.html
+++ b/index.html
@@ -76,12 +76,19 @@
                 <h4 class="highLow" id="highLowFive"></h4>
               </div>
               <div class="searchBar" id="searchBar">
+                <div class="search">
                 <input type="text" id="searchBarA" placeholder="Search for a City" onkeyup="progressSearch()">
                 <ul id="listOfOptions">
                   This feature is currently unavailable.
                 </ul>
+                </div>
               </div>
-              <div class="logo" id="logo"></div>
+              <div class="precip" id="precip">
+                <span class="precipContainer">
+                  <span class="material-symbols-outlined" id="precipIcon"></span>
+                  <span id="precipReading"></span>
+                </span>
+              </div>
               <div class="weatherData" id="weatherData">
                 <!--  graph -->
                 <table class="charts-css area data-spacing-1 show-labels labels-align-center" id="tempChart">
