added graph switch transitions

--- a/index.html
+++ b/index.html
@@ -96,99 +96,99 @@
                    <tbody>
                      <tr>
                        <th scope="row" id="p1"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point1" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point1" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p2"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point2" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point2" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p3"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point3" class="charts-p"><span class="data" id="pin1"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point3" class="charts-p animateChart"><span class="data" id="pin1"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p4"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point4" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point4" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p5"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point5" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point5" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p6"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point6" class="charts-p"><span class="data" id="pin2"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point6" class="charts-p animateChart"><span class="data" id="pin2"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p7"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point7" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point7" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p8"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point8" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point8" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p9"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point9" class="charts-p"><span class="data" id="pin3"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point9" class="charts-p animateChart"><span class="data" id="pin3"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p10"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point10" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point10" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p11"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point11" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point11" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p12"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point12" class="charts-p"><span class="data" id="pin4"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point12" class="charts-p animateChart"><span class="data" id="pin4"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p13"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point13" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point13" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p14"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point14" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point14" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p15"></th>
-                       <td style="--start: 0.2; --size: 0.2"  id="point15" class="charts-p"><span class="data" id="pin5"></span></td>
+                       <td style="--start: 0.2; --size: 0.2"  id="point15" class="charts-p animateChart"><span class="data" id="pin5"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p16"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point16" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point16" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p17"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point17" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point17" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p18"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point18" class="charts-p"><span class="data" id="pin6"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point18" class="charts-p animateChart"><span class="data" id="pin6"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p19"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point19" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point19" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p20"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point20" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point20" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p21"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point21" class="charts-p"><span class="data" id="pin7"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point21" class="charts-p animateChart"><span class="data" id="pin7"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p22"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point22" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point22" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p23"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point23" class="charts-p"><span class="data"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point23" class="charts-p animateChart"><span class="data"></span></td>
                      </tr>
                      <tr>
                        <th scope="row" id="p24"></th>
-                       <td style="--start: 0.2; --size: 0.2" id="point24" class="charts-p"><span class="data" id="pin8"></span></td>
+                       <td style="--start: 0.2; --size: 0.2" id="point24" class="charts-p animateChart"><span class="data" id="pin8"></span></td>
                      </tr>
                   </tbody>
                   
