added transition to precip

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
               </div>
               <div class="precip" id="precip">
-                <span class="precipContainer">
+                <span class="precipContainer precipAnimate" id="precipSpan">
                   <span class="material-symbols-outlined" id="precipIcon"></span>
                   <span id="precipReading"></span>
                 </span>
