prep to work on search

--- a/index.html
+++ b/index.html
@@ -221,9 +221,10 @@
     </div>
     <div class="footerSquare3">
       <ul>
-        <li>Used APIs</li>
+        <li>Used Sources</li>
         <li><a href="https://open-meteo.com/" target="_blank">Open-Meteo</a></li>
         <li><a href="https://www.bigdatacloud.com/" target="_blank">Big Data Cloud</a></li>
+        <li><a href="https://simplemaps.com/data/world-cities" target="_blank">World Cities</a></li>
       </ul>
     </div>
     <div class="footerSquare4">
