--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
                 <div class="search">
                 <input type="text" id="searchBarA" placeholder="Search for a City" onkeyup="progressSearch()">
                 <ul id="listOfOptions">
-                  This feature is currently unavailable.
+                  <li class = "searchOptions visible" id="option1">temp</li>
+                  <li class = "searchOptions visible" id="option2">temp</li>
+                  <li class = "searchOptions visible" id="option3">temp</li>
+                  <li class = "searchOptions visible" id="option4">temp</li>
+                  <li class = "searchOptions visible" id="option5">temp</li>
                 </ul>
                 </div>
               </div>
