--- a/index.html
+++ b/index.html
@@ -240,5 +240,6 @@
 
 
 </body>
-  <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+<script src="script.js"></script>
 </html>
