Fixed an error that caused forecasts to be delivered for a day ahead. Continued work on less.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="images/icon.png">
     <link href="css/style-global.css" rel="stylesheet" type="text/css" />
     <link href="css/style-index.css" rel="stylesheet" type="text/css" />
+   <!-- <link rel="stylesheet/less" type="text/css" href="index.less"/> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -31,21 +32,21 @@
           <div class="today" id="today">
             <span class="material-symbols-outlined" id="icon"></span>
             <h1 class="info" id="info"></h1>
-              <h2 class="city" id="city"></h2>
-              <h2 class="feels-like" id="feels-like"></h2>
-                <h3 class="sky" id="sky">Loading Your Weather...</h3>
-                <h4 class="highLow" id="highLow"></h4>
-              <div class="dailyBoxes">
-                <div class="boxOne" id="boxOne">
-                  <h5>Humidity</h5>
-                  <h3 class="humidity" id="humidity"></h3>
-                </div>
-                <div class="boxTwo" id="boxTwo">
-                  <h5>Wind</h5>
-                  <h3 class="wind" id="wind"></h3>
-                </div>
+            <h2 class="city" id="city"></h2>
+            <h2 class="feels-like" id="feels-like"></h2>
+            <h3 class="sky" id="sky">Loading Your Weather...</h3>
+            <h4 class="highLow" id="highLow"></h4>
+            <div class="dailyBoxes">
+              <div class="boxOne" id="boxOne">
+                <h5>Humidity</h5>
+                <h3 class="humidity" id="humidity"></h3>
               </div>
-              <div id="message"></div>
+              <div class="boxTwo" id="boxTwo">
+                <h5>Wind</h5>
+                <h3 class="wind" id="wind"></h3>
+              </div>
+            </div>
+            <div id="message"></div>
             
           </div>
           <div class="forecast" id="forecast">
